--- a/disclaimer.html
+++ b/disclaimer.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Intuition Fabric (iFab): Inequality</title>
+		<title>Intuition Fabric (iFab): Legal</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -52,25 +52,209 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Inequality</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Disclaimers</h2>
+							<p>NOT AN OFFER TO SOLICIT SECURITIES AND RISKS ASSOCIATED WITH INT
+AND THE INTUITON FABRIC APPLICATION</p>
 						</header>
 
 						<!-- Content -->
 							<section id="content">
-								<a href="#" class="image fit"><img src="images/bulb_break.jpg" alt="" /></a>
-								<h3>Dolore Amet Consequat</h3>
-								<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam cubilia adipiscing interdum aliquet aliquet placerat cubilia accumsan cep ante nullam adipiscing tortor odio. Iaculis adipiscing accumsan nascetur in cras. Lacinia placerat.</p>
-								<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique faucibus magna adipiscing aliquet blandit nisi dolor accumsan nascetur lorem. Vis enim. Curae. Mi arcu vis aliquam ipsum non accumsan ac mi faucibus amet eu accumsan erat interdum semper accumsan. Eu sagittis tellus accumsan neque lorem penatibus in porttitor. Vivamus commodo curae. Condimentum lobortis praesent id ac lorem. Lorem vis ipsum dolor feugiat consequat dolore adipiscing.</p>
-								<h3>Sed Magna Ornare</h3>
-								<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus. In accumsan lorem nunc ultrices a ac eu accumsan ac id nullam. Nec lobortis. Faucibus. Mi commodo laoreet arcu at non mi lacinia aliquet non lobortis phasellus accumsan nascetur varius. Integer orci porttitor eu faucibus aliquet faucibus ac accumsan adipiscing accumsan odio. Ut adipiscing.</p>
-								<ul>
-									<li>Faucibus orci lobortis ac adipiscing integer.</li>
-									<li>Col accumsan arcu mi aliquet placerat.</li>
-									<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-									<li>Blandit massa non blandit tempor interdum.</li>
-									<li>Lacinia mattis arcu nascetur lobortis.</li>
-								</ul>
+								<h3></h3>
+								<p class=normal><span>This document is for informational purposes only and does not constitute
+an offer or solicitation to sell shares or securities in Intuition Machine Inc.
+or any related or associated company. Any such offer or solicitation would only
+be made by a confidential offering memorandum and in accordance with applicable
+securities and other laws. None of the information or analyses presented are
+intended to form the basis for any investment decision, and no specific
+recommendations are intended. Accordingly, this document does not constitute
+investment advice or counsel or solicitation for investment in any security.
+This document does not constitute or form part of, and should not be construed
+as, any offer for sale or subscription of, or any invitation to offer to buy or
+subscribe for, any securities, nor should it or any part of it form the basis
+of, or be relied on in any connection with, any contract or commitment
+whatsoever. Intuition Machine expressly disclaims any and all responsibility
+for any direct or consequential loss or damage of any kind whatsoever arising
+directly or indirectly from: (i) reliance on any information contained in this
+document, (ii) any error, omission or inaccuracy in any such information or
+(iii) any action resulting therefrom.<o:p></o:p></span></p>
+
+<p class=normal><span>The Intuiton Fabirc (iFab) token, or INT, is a cryptographic token used by the iFab
+application INT is not a cryptocurrency.<o:p></o:p></span></p>
+
+<p class=normal><span>At the time of this writing, (i) with the exception of being used to
+place ads on the iFab platform, INT cannot be exchanged for goods or services,
+(ii) INT has no known uses outside the iFab application, and (iii) INT cannot
+be traded on any known exchanges.<o:p></o:p></span></p>
+
+
+<p class=normal><span>INT is not an investment.<o:p></o:p></span></p>
+
+<p class=normal><span>There is no guarantee &#8211; indeed there is no reason to believe
+&#8211; that the INT you purchase will increase in value. It may &#8211; and
+probably will at some point &#8211; decrease in value. Those who do not
+actually use their INT honestly and fairly may lose their right to use INT and
+may lose their INT to those that do use INT honestly and fairly.<o:p></o:p></span></p>
+
+
+<p class=normal><span> INT is not evidence of ownership or right to control.<o:p></o:p></span></p>
+
+
+<p class=normal><span>Controlling INT does not grant its controller ownership or equity in
+Intuition Machine, or the iFab application. INT does not grant any right to
+participate in the control, direction or decision making of Intuition Machine
+or the iFab application.<o:p></o:p></span></p>
+
+
+<p class=normal><span>RISK DISCLOSURES<o:p></o:p></span></p>
+
+<p class=normal><span>1) Risk of Losing Access to INT Due to Loss of Credentials<o:p></o:p></span></p>
+
+<p class=normal><span>The purchaser's INT may be associated with a iFab account until they are
+distributed to the purchaser. The iFab account can only be accessed with login
+credentials selected by the purchaser. The loss of these credentials will
+result in the loss of INT. Best practices dictate that purchasers safely store
+credentials in one or more backup locations geographically separated from the
+working location.<o:p></o:p></span></p>
+
+<p class=normal><span>2) Risks Associated with the Ethereum Protocol<o:p></o:p></span></p>
+
+<p class=normal><span>INT and the iFab application are based on the Ethereum protocol. As
+such, any malfunction, unintended function, unexpected functioning of or attack
+on the Ethereum protocol may cause the iFab application or INT to malfunction
+or function in an unexpected or unintended manner. Ether, the native unit of
+account of the Ethereum protocol may itself lose value in ways similar to INT,
+and also other ways. More information about the Ethereum protocol is available
+at http://www.ethereum.org.<o:p></o:p></span></p>
+
+<p class=normal><span>3) Risks Associated with Purchaser Credentials<o:p></o:p></span></p>
+
+<p class=normal><span>Any third party that gains access to or learns of the purchaser's login
+credentials or private keys may be able to dispose of the purchaser's INT. To
+minimize this risk, the purchaser should guard against unauthorized access to
+their electronic devices.<o:p></o:p></span></p>
+
+<p class=normal><span>4) Risk of Unfavorable Regulatory Action in One or More Jurisdictions<o:p></o:p></span></p>
+
+<p class=normal><span >Blockchain technologies have been the subject of scrutiny by various
+regulatory bodies around the world. The functioning of the iFab application and
+INT could be impacted by one or more regulatory inquiries or actions, including
+the licensing of or restrictions on the use, sale, or possession of digital
+tokens like INT, which could impede, limit or end the development of the iFab
+application.<o:p></o:p></span></p>
+
+<p class=normal><span>5) Risk of Alternative, Unofficial iFab Application<o:p></o:p></span></p>
+
+<p class=normal><span>Following the Crowdsale and the development of the initial version of
+the INT platform, it is possible that alternative applications could be established,
+which use the same open source code and protocol underlying the iFab
+application. The official iFab application may compete with these alternative,
+unofficial INT -based applications, which could potentially negatively impact
+the Lunyr application and INT, including its value.<o:p></o:p></span></p>
+
+<p class=normal><span>6) Risk of Insufficient Interest in the iFab Application or Distributed
+Applications<o:p></o:p></span></p>
+
+<p class=normal><span>It is possible that the iFab application will not be used by a large
+number of businesses, individuals, and other organizations and that there will
+be limited public interest in the creation and development of distributed
+applications. Such a lack of interest could negatively impact INT and the iFab
+application.<o:p></o:p></span></p>
+
+<p class=normal><span>7) Risk that the iFab Application, As Developed, Will Not Meet the
+Expectations of iFab or the Purchaser<o:p></o:p></span></p>
+
+<p class=normal><span>The iFab application is presently under development and may undergo
+significant changes before release. Any expectations or assumptions regarding
+the form and functionality of the iFab application or INT (including
+participant behavior) held by Intuition Machine or the purchaser may not be met
+upon release, for any number of reasons including mistaken assumptions or
+analysis, a change in the design and implementation plans and execution of the iFab
+application.<o:p></o:p></span></p>
+
+<p class=normal><span>8) Risk of Theft and Hacking<o:p></o:p></span></p>
+
+<p class=normal><span>Hackers or other groups or organizations or countries may attempt to
+interfere with the iFab application or the availability of INT in any number of
+ways, including service attacks, Sybil attacks, spoofing, smurfing, malware
+attacks, or consensus based attacks.<o:p></o:p></span></p>
+
+<p class=normal><span>9) Risk of Security Weaknesses in the INT Application Core
+Infrastructure<o:p></o:p></span></p>
+
+<p class=normal><span
+>Software<o:p></o:p></span></p>
+
+<p class=normal><span>The iFab application consists of open source software that is based on
+other open source software. There is a risk that the Intuition Machine team, or
+other third parties may intentionally or unintentionally introduce weaknesses
+or bugs into the core infrastructural elements of the iFab application
+interfering with the use of or causing the loss of INT.<o:p></o:p></span></p>
+
+<p class=normal><span>10) Risk of Weaknesses or Exploitable Breakthroughs in the Field of<o:p></o:p></span></p>
+
+<p class=normal><span>Cryptography<o:p></o:p></span></p>
+
+<p class=normal><span>Advances in cryptography, or technical advances such as the development
+of quantum computers, could present risks to cryptocurrencies and the iFab
+platform, which could result in the theft or loss of INT.<o:p></o:p></span></p>
+
+<p class=normal><span>11) Risk of INT Mining Attacks<o:p></o:p></span></p>
+
+<p class=normal><span>As with other decentralized cryptographic tokens and cryptocurrencies,
+the blockchain used for the iFab application is susceptible to mining attacks,
+including double- spend attacks, majority mining power attacks, selfish
+-mining attacks, and race condition attacks. Any successful attacks present a
+risk to the iFab application, INT, and expected proper execution and sequencing
+of Ethereum contract computations. Despite the efforts of the Intuition Machine
+team, the risk of known or novel mining attacks exists.<o:p></o:p></span></p>
+
+<p class=normal><span>12) Risk of Lack of Adoption or Use of the iFab Application<o:p></o:p></span></p>
+
+<p class=normal><span>While INT should not be viewed as an investment, it may have value over
+time. That value may be limited if the iFab application lacks use and adoption.
+If this becomes the case, there may be few or no markets following the launch
+of the platform, potentially having an adverse impact on INT.<o:p></o:p></span></p>
+
+<p class=normal><span>13) Risk of an Illiquid Market for INT<o:p></o:p></span></p>
+
+<p class=normal><span>There very well may never be a secondary market for INT. There are
+currently no exchanges upon which INT would trade. If ever exchanges do
+develop, they will likely be relatively new and subject to poorly understood
+regulatory oversight. They may therefore be more exposed to fraud and failure
+than established, regulated exchanges for other products and have a negative
+impact on INT.<o:p></o:p></span></p>
+
+
+<p class=normal><span>14) Risk of Uninsured Losses<o:p></o:p></span></p>
+
+<p class=normal><span>Unlike bank accounts or accounts at some other financial institutions,
+funds held using the iFab application or Ethereum network are generally
+uninsured. In the event of any loss, there is no public insurer, such as the
+FDIC, or private insurer, to offer recourse to the purchaser.<o:p></o:p></span></p>
+
+<p class=normal><span>15) Risk of Dissolution of the iFab Project<o:p></o:p></span></p>
+
+<p class=normal><span>It is possible that, due to any number of reasons, including an
+unfavorable fluctuation in the value of Ether, development issues with the iFab
+application, the failure of business relationships, or competing intellectual
+property claims, the iFab project may no longer be viable as a business or
+otherwise and may dissolve or fail to launch.<o:p></o:p></span></p>
+
+<p class=normal><span>16) Risk of Malfunction in the iFab Application<o:p></o:p></span></p>
+
+<p class=normal><span>It is possible that the iFab application malfunctions in an unfavorable
+way, including one that results in the loss of INT.<o:p></o:p></span></p>
+
+<p class=normal><span>17) Unanticipated Risks<o:p></o:p></span></p>
+
+<p class=normal><span>Cryptographic tokens are a new and untested technology. In addition to
+the risks discussed in this White Paper, there are risks that the iFab team
+cannot anticipate.<o:p></o:p></span></p>
+
+
+<p class=normal><span>Further risks may materialize as unanticipated combinations or
+variations of the discussed risks or the emergence of new risk.<o:p></o:p></span></p>
+
 							</section>
 
 					</div>
