shorten summer's quote

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<div class="content">
 						<header>
 							<h2>Participation enabled by Blockchain</h2>
-							<p>"I’m reasonably confident … that the blockchain will change a great deal of financial practice and exchange”<br/>
+							<p>"blockchain will change a great deal of financial practice and exchange”<br/>
 								- Larry Summers, Former US Treasury Secretary
 										</p>
 							</header>
