change names of buttons

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2><img src="images/intuitionfabric.gif" alt="" /></h2>
+							<h2><img src="images/intuitionfabricv9.jpg" alt="" /></h2>
 							<p>Democratized Deep Learning Artificial Intelligence<br/>
 							on the Decentralized Ethereum Blockchain.</p>
 
@@ -79,7 +79,7 @@
 											<p>"By A.D. 2035, rich people will be thousands of times smarter than poor people"<br/>
 											 - Ray Kurzweil, Author of 'The Singularity is Near'</p>	
 										<ul class="actions">
-											<li><a href="inequality.html" class="button">Learn More</a></li>
+											<li><a href="inequality.html" class="button">The Problem</a></li>
 										</ul>
 									</header>
 								</div>
@@ -111,7 +111,7 @@
 						</header>
 						<p></p>
 						<ul class="actions">
-							<li><a href="disruptive.html" class="button">Learn More</a></li>
+							<li><a href="disruptive.html" class="button">The Intuition</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
@@ -123,14 +123,14 @@
 					<div class="content">
 						<header>
 							<h2>Participation enabled by Blockchain</h2>
-							<p>"blockchain will change a great deal of financial practice and exchange”<br/>
+							<p>"The blockchain will change a great deal of financial practice and exchange”<br/>
 								- Larry Summers, Former US Treasury Secretary
 										</p>
 							</header>
 						<p>Intuition Fabric™ is built on Ethereum, a decentralized blockchain network similar to Bitcoin.
 							  Ethereum’s smart contract capability enables the creation of an incentivized system that aligns participants with goals of the Intuition Fabric™ product</p>
 						<ul class="actions">
-							<li><a href="blockchain.html" class="button">Learn More</a></li>
+							<li><a href="blockchain.html" class="button">The Market</a></li>
 						</ul>
 					</div>
 					<a href="#four" class="goto-next scrolly">Next</a>
@@ -148,7 +148,7 @@
 							</header>
 						<p>Intuition Fabric™ is a learning marketplace that amplifies the intelligence of its participants.</p>
 						<ul class="actions">
-							<li><a href="fusion.html" class="button">Learn More</a></li>
+							<li><a href="fusion.html" class="button">The Roadmap</a></li>
 						</ul>
 					</div>
 					<a href="#three" class="goto-next scrolly">Next</a>
