--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 							<ul class="actions">
 							  <li><a href="https://gum.co/wxLP" class="button">Read the Whitepaper</a></li>
-							  <li><a href="#" class="button">Access the Demo</a></li>
+							  <li><a href="#" class="button">Try the Demo</a></li>
 							</ul>
 						</header>
 						
@@ -143,8 +143,8 @@
 						<header>
 							<h2>The Fusion of Deep Learning and Ethereum</h2>
 							<p>"AI, deep learning, machine learning — whatever you’re doing if you don’t understand it — learn it. Because otherwise you’re going to be a dinosaur within 3 years."
-								<br/>			— Mark Cuban, Billionaire Entrepreneur
-										</p>
+								<br/>— Mark Cuban, Billionaire Entrepreneur
+							</p>
 							</header>
 						<p>Intuition Fabric™ is a learning marketplace that amplifies the intelligence of its participants.</p>
 						<ul class="actions">
