add new eye logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<section id="banner">
 					<div class="content">
 						<header>
-							<h2><img src="images/intuitionfabricv9.jpg" alt="" /></h2>
+							<h2><img src="images/intuitionfabricv12.gif" height="150" width="150" alt="" /></h2>
 							<p>Democratized Deep Learning Artificial Intelligence<br/>
 							on the Decentralized Ethereum Blockchain.</p>
 
