--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 					<div class="content">
 						<header>
 							<h2><img src="images/intuitionfabricv12.gif" height="150" width="150" alt="" /></h2>
-							<p>Democratized Deep Learning Artificial Intelligence<br/>
-							on the Decentralized Ethereum Blockchain.</p>
+							<p>Democratized Deep Learning AI<br/>
+							on the Ethereum Blockchain.</p>
 
 							<ul class="actions">
 							  <li><a href="https://gum.co/wxLP" class="button">Read the Whitepaper</a></li>
