--- a/blockchain.html
+++ b/blockchain.html
@@ -88,18 +88,32 @@
 								<!-- Content -->
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
+										<h3>Architecture of Participation</h3>
+										<p>iFab is designed to enhance the value of actors in its marketplace.   iFab is essentially a market of codified thought and ideas.  Said differently, it is a knowledge market.   This knowledge does not remain static, but rather is dynamic.  The interactions of actors in this market enhanced the knowledge contained in the market.  Making it gradually increase in value over time.
+
+										</p>
+										<h3>Market Participants</h3>
+										<p> We envision many kinds of participants:</p>  
+
+<ul>
+											<li>Consumers - These are actors that request from Reasoners inferencing contextual data that they the Consumer provides.  The contextual data may be provided with different levels of privacy requirements.
+ </li>
+<li>Contractors - Are also consumers, however their requirements is for other actors to train new models on the data they provide.  The models that are created are published into the global computational graph.
+ </li>
+<li>Trainers - Trainers are computational resources that are able to create new models at the request of Contractors.
+ </li>
+<li>Curators - Are also Trainers, however work towards consolidating the models in the computational graph. 
+ </li>
+<li>Reasoners - Are computational resources that execute the models that already are present in the computational graph.  A Reasoner may be local or remote.  
+ </li>
+    <li>Auditors - Are services that validate the authenticity of the work of Curators.
+ </li>
+    <li>Information Providers - Are services that make external data accessible to the system.
 										</ul>
+										<p>Networking effects are what will drive participation by actors in this market.  The initial value that will be created in a consequence of designing a “architecture of participation”.   This implies that frictionless participation must be made available to different actors.  More concretely, this means that the user interfaces and tooling be made conveniently available.  
+										</p><p> 
+An architecture of participation combined with carefully designed incentive structures can lead to organic and sustainable growth of the system.  Ease of access to Artificial Intuition (i.e. Deep Learning) will only grow exponentially over time.  This market will ride the coattails of this market expansion.
+ </p>
 									</section>
 
 							</div>
