--- a/blockchain.html
+++ b/blockchain.html
@@ -52,8 +52,8 @@
 				<div id="main" class="wrapper style1">
 					<div class="container">
 						<header class="major">
-							<h2>Blockchain</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<h2>Partiipation enabled by Blockchain</h2>
+							<p>Marketplace participants have their incentives aligned with the goals of the platform. </p>
 						</header>
 						<div class="row 150%">
 							<div class="4u 12u$(medium)">
