--- a/blockchain.html
+++ b/blockchain.html
@@ -85,7 +85,7 @@
 
 								<!-- Content -->
 									<section id="content">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/blockchain3.jpg" alt="" /></a>
 										<h3>Architecture of Participation</h3>
 										<p>iFab is designed to enhance the value of actors in its marketplace.   iFab is essentially a market of codified thought and ideas.  Said differently, it is a knowledge market.   This knowledge does not remain static, but rather is dynamic.  The interactions of actors in this market enhanced the knowledge contained in the market.  Making it gradually increase in value over time.
 
@@ -94,19 +94,19 @@
 										<p> We envision many kinds of participants:</p>  
 
 <ul>
-											<li>Consumers - These are actors that request from Reasoners inferencing contextual data that they the Consumer provides.  The contextual data may be provided with different levels of privacy requirements.
+											<li><b>Consumers</b> - These are actors that request from Reasoners inferencing contextual data that they the Consumer provides.  The contextual data may be provided with different levels of privacy requirements.
  </li>
-<li>Contractors - Are also consumers, however their requirements is for other actors to train new models on the data they provide.  The models that are created are published into the global computational graph.
+<li><b>Contractors</b> - Are also consumers, however their requirements is for other actors to train new models on the data they provide.  The models that are created are published into the global computational graph.
  </li>
-<li>Trainers - Trainers are computational resources that are able to create new models at the request of Contractors.
+<li><b>Trainers</b> - Trainers are computational resources that are able to create new models at the request of Contractors.
  </li>
-<li>Curators - Are also Trainers, however work towards consolidating the models in the computational graph. 
+<li><b>Curators</b> - Are also Trainers, however work towards consolidating the models in the computational graph. 
  </li>
-<li>Reasoners - Are computational resources that execute the models that already are present in the computational graph.  A Reasoner may be local or remote.  
+<li><b>Reasoners</b> - Are computational resources that execute the models that already are present in the computational graph.  A Reasoner may be local or remote.  
  </li>
-    <li>Auditors - Are services that validate the authenticity of the work of Curators.
+    <li><b>Auditors</b> - Are services that validate the authenticity of the work of Curators.
  </li>
-    <li>Information Providers - Are services that make external data accessible to the system.
+    <li><b>Information Providers</b> - Are services that make external data accessible to the system.
 										</ul>
 										<p>Networking effects are what will drive participation by actors in this market.  The initial value that will be created in a consequence of designing a “architecture of participation”.   This implies that frictionless participation must be made available to different actors.  More concretely, this means that the user interfaces and tooling be made conveniently available.  
 										</p><p> 
