update blockchain html

--- a/blockchain.html
+++ b/blockchain.html
@@ -53,7 +53,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Partiipation enabled by Blockchain</h2>
-							<p>Marketplace participants have their incentives aligned with the goals of the platform. </p>
+							<p>Marketplace participants have their incentives aligned with the growth of the platform. </p>
 						</header>
 						<div class="row 150%">
 							<div class="4u 12u$(medium)">
@@ -87,7 +87,12 @@
 									<section id="content">
 										<a href="#" class="image fit"><img src="images/blockchain3.jpg" alt="" /></a>
 										<h3>Architecture of Participation</h3>
-										<p>iFab is designed to enhance the value of actors in its marketplace.   iFab is essentially a market of codified thought and ideas.  Said differently, it is a knowledge market.   This knowledge does not remain static, but rather is dynamic.  The interactions of actors in this market enhanced the knowledge contained in the market.  Making it gradually increase in value over time.
+										<p>Intuition Fabric is designed to enhance the value of actors in its marketplace. 
+											Intuition Fabric is essentially a market of codified thought and ideas.  
+											Said differently, it is a knowledge market.   
+											This knowledge does not remain static, but rather is dynamic.  
+											The interactions of actors in this market enhanced the knowledge contained in the market.  
+											Making it gradually increase in value over time.
 
 										</p>
 										<h3>Market Participants</h3>
