update inequality text

--- a/inequality.html
+++ b/inequality.html
@@ -83,7 +83,10 @@
 					                <li>Every nation unites under one flag and one leadership.&rdquo; </li>
                					</ul>
 
-								<p><li>Not a very promising list of options. &nbsp;The threat of AI is not some futuristic idea, it is indeed here today and will become ever more sophisticated and controlling. &nbsp;Love however forgets to include a fifth option, solving the AI arms race in such a way that permits the sharing of AI across all of humanity. &nbsp;However until that happens, DL technology and DL expertise will be cornered by most of the world&rsquo;s largest
+								<p>Not a very promising list of options. &nbsp;</p>
+								
+								<p>
+								The threat of AI is not some futuristic idea, it is indeed here today and will become ever more sophisticated and controlling. &nbsp;Love however forgets to include a fifth option, solving the AI arms race in such a way that permits the sharing of AI across all of humanity. &nbsp;However until that happens, DL technology and DL expertise will be cornered by most of the world&rsquo;s largest
 										    technology companies completely monopolizing it and creating an increase in the gap between economic groups. &nbsp;Yoshua Bengio makes the following comments in a recent </li>
                     				<a href="https://www.ft.com/content/298e2ac0-b010-11e6-a37c-f4a01f1b0fa1">Financial Times interview</a>:</p>
 
