--- a/disruptive.html
+++ b/disruptive.html
@@ -63,18 +63,67 @@
 										<!--a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a-->
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/Dy0hJWltsyE" frameborder="0" allowfullscreen></iframe>
 										<p>A video from Nvidia</p>
-										<h3>Dolore Amet Consequat</h3>
-										<p>Aliquam massa urna, imperdiet sit amet mi non, bibendum euismod est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam quam, mollis at magna consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum est. Curabitur mi justo, tincidunt vel eros ullamcorper, porta cursus justo. Cras vel neque eros. Vestibulum diam.</p>
-										<p>Vestibulum diam quam, mollis at consectetur non, malesuada quis augue. Morbi tincidunt pretium interdum. Morbi mattis elementum orci, nec dictum porta cursus justo. Quisque ultricies lorem in ligula condimentum, et egestas turpis sagittis. Cras ac nunc urna. Nullam eget lobortis purus. Phasellus vitae tortor non est placerat tristique.</p>
-										<h3>Sed Magna Ornare</h3>
-										<p>In vestibulum massa quis arcu lobortis tempus. Nam pretium arcu in odio vulputate luctus. Suspendisse euismod lorem eget lacinia fringilla. Sed sed felis justo. Nunc sodales elit in laoreet aliquam. Nam gravida, nisl sit amet iaculis porttitor, risus nisi rutrum metus.</p>
-										<ul>
-											<li>Faucibus orci lobortis ac adipiscing integer.</li>
-											<li>Col accumsan arcu mi aliquet placerat.</li>
-											<li>Lobortis vestibulum ut magna tempor massa nascetur.</li>
-											<li>Blandit massa non blandit tempor interdum.</li>
-											<li>Lacinia mattis arcu nascetur lobortis.</li>
-										</ul>
+										<h3>What is Deep Learning (DL) and why is it important?</h3>
+										<p>To understand its importance in our world we have to begin to evaluate what is defined as Deep Learning and how this might
+											impact our day to day lives.
+										</p>
+										<p>
+											To summarize, Artificial Intuition (AI or Deep Learning) is technology that is demonstrably superior to previous AI methods.
+											The smartest companies in the world are migrating their infrastructure to support this new paradigm. AI is a departure from
+											the traditional reductionist way of thinking and is an entirely new way of “automating automation.” DL is enabling self-driving
+											cars and other self-driving automation. DL is supporting work by not only providing assistive capabilities, but also more
+											creative generative capabilities. DL is also enabling the prediction of human behavior. The weaponization of AI to manipulate
+											human behavior has begun to emerge. The major companies are acquiring DL talent like there’s no tomorrow. Like it or not
+											DL is the future and that future is now.
+										</p>
+										<p>
+											While DL seemed to previously be a far fetched notion, many professionals are beginning to see the value in this technology.
+										</p>
+										<p>
+											Google’s founder Sergey Brin, an extremely talented computer scientist, stated in a recent World Economic Forum discussion
+											that he himself did not even foresee deep learning:
+										</p>
+										<p>
+											“The revolution in deep nets has been very profound, it definitely surprised me, even though I was sitting right there.”
+										</p>
+										<p>
+											This “revolution” has been noticed by others like, Sundar Pichai who in a recent quarterly financial call said:
+										</p>
+										<p>
+											"Machine learning is a core, transformative way by which we’re re-thinking how we’re doing everything,"
+										</p>
+										<p>
+											The more precise term is “Deep Learning.” He just described it in terms that perhaps the less educated financial press could
+											comprehend.
+										</p>
+										<p>
+											DL progress has also been taking the academic community by storm. Two articles by practitioners of classical machine learning
+											have summarized why they think DL is taking over the world. Chris Manning, a renowned expert in NLP, writes about the “Deep
+											learning Tsunami“:
+										</p>
+										<p>
+											Deep learning waves have lapped at the shores of computational linguistics for several years now, but 2015 seems like the
+											year when the full force of the tsunami hit the major Natural Language Processing (NLP) conferences. However, some pundits
+											are predicting that the final damage will be even worse.
+										</p>
+										<p>
+
+											The same sentiment is expressed by Nicholas Paragios, who works in the field of computer vision. Paragios writes in “Computer
+											Vision Research: the Deep Depression“:
+										</p>
+										<p>
+											It might be simply because deep learning on highly complex, hugely determined in terms of degrees of freedom graphs once
+											endowed with massive amount of annotated data and unthinkable — until very recently — computing power can solve all computer
+											vision problems. If this is the case, well it is simply a matter of time that industry (which seems to be already the case)
+											takes over, research in computer vision becomes a marginal academic objective and the field follows the path of computer
+											graphics (in terms of activity and volume of academic research).
+										</p>
+										<p>
+											Despite the overwhelming potential of DL and its possible benefits, it is still a “Disruptive” technology that is taking
+											over operations of the most advanced technology companies in the world.
+
+											<p>
+										
 									</section>
 
 							</div>
