update disruptive text

--- a/disruptive.html
+++ b/disruptive.html
@@ -53,7 +53,7 @@
 					<div class="container">
 						<header class="major">
 							<h2>Disruptive</h2>
-							<p>Ipsum dolor feugiat aliquam tempus sed magna lorem consequat accumsan</p>
+							<p>Deep Learning is Disruptive Artificial Intelligence</p>
 						</header>
 						<div class="row 150%">
 							<div class="8u 12u$(medium)">
@@ -62,7 +62,7 @@
 									<section id="content">
 										<!--a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a-->
 										<iframe width="560" height="315" src="https://www.youtube.com/embed/Dy0hJWltsyE" frameborder="0" allowfullscreen></iframe>
-										<p>A video from Nvidia</p>
+										<small>A video on Deep Learning from Nvidia</small>
 										<h3>What is Deep Learning (DL) and why is it important?</h3>
 										<p>To understand its importance in our world we have to begin to evaluate what is defined as Deep Learning and how this might
 											impact our day to day lives.
@@ -83,15 +83,15 @@
 											Google’s founder Sergey Brin, an extremely talented computer scientist, stated in a recent World Economic Forum discussion
 											that he himself did not even foresee deep learning:
 										</p>
-										<p>
+										<blockquote>
 											“The revolution in deep nets has been very profound, it definitely surprised me, even though I was sitting right there.”
-										</p>
+										</blockquote>
 										<p>
 											This “revolution” has been noticed by others like, Sundar Pichai who in a recent quarterly financial call said:
 										</p>
-										<p>
+										<blockquote>
 											"Machine learning is a core, transformative way by which we’re re-thinking how we’re doing everything,"
-										</p>
+										</blockquote>
 										<p>
 											The more precise term is “Deep Learning.” He just described it in terms that perhaps the less educated financial press could
 											comprehend.
@@ -101,23 +101,23 @@
 											have summarized why they think DL is taking over the world. Chris Manning, a renowned expert in NLP, writes about the “Deep
 											learning Tsunami“:
 										</p>
-										<p>
+										<blockquote>
 											Deep learning waves have lapped at the shores of computational linguistics for several years now, but 2015 seems like the
 											year when the full force of the tsunami hit the major Natural Language Processing (NLP) conferences. However, some pundits
 											are predicting that the final damage will be even worse.
-										</p>
+										</blockquote>
 										<p>
 
 											The same sentiment is expressed by Nicholas Paragios, who works in the field of computer vision. Paragios writes in “Computer
 											Vision Research: the Deep Depression“:
 										</p>
-										<p>
+										<blockquote>
 											It might be simply because deep learning on highly complex, hugely determined in terms of degrees of freedom graphs once
 											endowed with massive amount of annotated data and unthinkable — until very recently — computing power can solve all computer
 											vision problems. If this is the case, well it is simply a matter of time that industry (which seems to be already the case)
 											takes over, research in computer vision becomes a marginal academic objective and the field follows the path of computer
 											graphics (in terms of activity and volume of academic research).
-										</p>
+										</blockquote>
 										<p>
 											Despite the overwhelming potential of DL and its possible benefits, it is still a “Disruptive” technology that is taking
 											over operations of the most advanced technology companies in the world.
