--- a/disruptive.html
+++ b/disruptive.html
@@ -130,6 +130,7 @@
 							<div class="4u$ 12u$(medium)">
 
 								<!-- Sidebar -->
+								<!-- hide temporarilly
 									<section id="sidebar">
 										<section>
 											<h3>Magna Feugiat</h3>
@@ -152,6 +153,7 @@
 											</footer>
 										</section>
 									</section>
+								-->	
 
 							</div>
 						</div>
